<resources>

    <string name="api_key">AIzaSyAZiDnD1WmSlA3LfjFrKlcEDx73Ievm1u4</string>
<!--    <string name="direction_api_key">AIzaSyDVBR-BTRerxhGjrqloH25KcN06-wUi7Ac</string>-->
    <string name="app_name">EasyRent</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="not_have_an_account_sign_up">Not have an account? Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_payment">Payment</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bank_of_canada">Bank Of Canada</string>
    <string name="search_ride">Search Ride</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_ride_detail">Ride Details</string>
    <string name="save">save</string>
    <string name="no_place_selected">No Place selected</string>
    <string name="add">Add</string>
    <string name="title_activity_maps">Map</string>
    <string name="looking_for_an_affordable_ride">Looking for an affordable ride?</string>
    <string name="we_ve_got_you_covered">We have got you covered!!</string>
    <string name="enter_your_postal_code_above_to_find_you_a_ride_nearby">Enter your postal code above to find you a ride nearby...</string>
    <string name="search_places">Search Places</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="cvv">CVV</string>
    <string name="cancel">Cancel</string>
</resources>