<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="7"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="New to app? no issues, let's get you started!"
        android:textStyle="italic"
        android:textColor="@color/purple_500"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="7"
        android:background="@color/purple_200"
        card_view:cardCornerRadius="25dp">

    <ImageView
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:id="@+id/profile_pic"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:src="@drawable/user" />

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="7"
        android:background="@color/purple_500"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:hint="@string/password" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:background="@drawable/round_shape"
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:text="@string/signUp" />
</LinearLayout>