<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="7"
        android:background="@color/purple_200"
        card_view:cardCornerRadius="25dp">

        <ImageView
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:id="@+id/profile_pic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="7"
        android:background="@color/purple_500"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="5dp"
        android:hint="@string/last_name" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/LinearLayouts02"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|end">
    <Button
        android:layout_margin="5dp"
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/round_shape"
        android:text="@string/edit" />
        </LinearLayout>
</LinearLayout>